get price by relationship otherwise default to / 2 formula; move JdbcUtil to entities module