@@ -1,20 +1,26 @@
 package com.jftse.server.core.service.impl;
 
+import com.jftse.entities.database.model.SRelationships;
+import com.jftse.entities.database.model.item.Product;
 import com.jftse.entities.database.model.pocket.PlayerPocket;
 import com.jftse.entities.database.model.pocket.Pocket;
 import com.jftse.entities.database.repository.item.ItemEnchantRepository;
 import com.jftse.entities.database.repository.item.ItemMaterialRepository;
 import com.jftse.entities.database.repository.item.ProductRepository;
 import com.jftse.entities.database.repository.pocket.PlayerPocketRepository;
+import com.jftse.jdbc.JdbcUtil;
 import com.jftse.server.core.item.EItemCategory;
 import com.jftse.server.core.item.EItemUseType;
 import com.jftse.server.core.service.PlayerPocketService;
 import com.jftse.server.core.service.PocketService;
 import lombok.RequiredArgsConstructor;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.persistence.TypedQuery;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -24,12 +30,16 @@ import java.util.Optional;
 @RequiredArgsConstructor
 @Transactional(isolation = Isolation.SERIALIZABLE)
 public class PlayerPocketServiceImpl implements PlayerPocketService {
+    private final Logger log = LogManager.getLogger(PlayerPocketServiceImpl.class);
+
     private final ItemMaterialRepository itemMaterialRepository;
     private final ItemEnchantRepository itemEnchantRepository;
     private final ProductRepository productRepository;
     private final PlayerPocketRepository playerPocketRepository;
 
     private final PocketService pocketService;
+
+    private final JdbcUtil jdbcUtil;
 
     @Override
     public PlayerPocket getItemAsPocket(Long itemPocketId, Pocket pocket) {
@@ -40,13 +50,6 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
     @Override
     public PlayerPocket getItemAsPocketByItemIndexAndCategoryAndPocket(Integer itemIndex, String category, Pocket pocket) {
         List<PlayerPocket> playerPocketList = playerPocketRepository.findAllByItemIndexAndCategoryAndPocket(itemIndex, category, pocket);
-        return getPlayerPocketAndHandleDuplicates(playerPocketList);
-    }
-
-    @Override
-    @Deprecated(forRemoval = true)
-    public PlayerPocket getItemAsPocketByItemIndexAndPocket(Integer itemIndex, Pocket pocket) {
-        List<PlayerPocket> playerPocketList = playerPocketRepository.findAllByItemIndexAndPocket(itemIndex, pocket);
         return getPlayerPocketAndHandleDuplicates(playerPocketList);
     }
 
@@ -100,12 +103,32 @@ public class PlayerPocketServiceImpl implements PlayerPocketService {
             sellPrice = sellPriceResult.get(0) * itemCount;
         }
         else { // everything else buy price / 2
-            List<Integer> sellPriceResult = productRepository.getItemSellPriceByItemIndexAndCategory(playerPocket.getItemIndex(), playerPocket.getCategory());
-            int buyPrice = sellPriceResult.get(0);
-            if (buyPrice <= 0)
-                buyPrice = 1;
+            List<Product> products = productRepository.findProductsByItem0AndCategory(playerPocket.getItemIndex(), playerPocket.getCategory());
+            if (!products.isEmpty()) {
+                List<SRelationships> relationships = new ArrayList<>();
+                jdbcUtil.execute(em -> {
+                    try {
+                        TypedQuery<SRelationships> query = em.createQuery("SELECT sr FROM SRelationships sr " +
+                                "WHERE sr.id_f = :id_f AND sr.status.id = 1 AND " +
+                                "sr.relationship.id = 8 AND sr.role.id = 4", SRelationships.class);
+                        query.setParameter("id_f", products.getFirst().getProductIndex());
+                        relationships.addAll(query.getResultList());
+                    } catch (Exception e) {
+                        log.error("Error while getting sell price: {}", e.getMessage());
+                    }
+                });
 
-            sellPrice = (int) Math.ceil((double) (buyPrice / 2) * (1 + (itemCount / (double) (buyPrice / 2))));
+                if (!relationships.isEmpty()) {
+                    SRelationships relationship = relationships.getFirst();
+                    sellPrice = relationship.getId_t().intValue() * itemCount;
+                } else { // default to buy price / 2
+                    int buyPrice = products.getFirst().getPrice0();
+                    if (buyPrice <= 0)
+                        buyPrice = 1;
+
+                    sellPrice = (int) Math.ceil((double) (buyPrice / 2) * (1 + (itemCount / (double) (buyPrice / 2))));
+                }
+            }
         }
         return sellPrice;
     }
